test/integration/syntax/checkpoint_2_0.pal
{8,11,15}
{===============================================================================
	line 8: expect error: no program name
	line 11: expect error: constant declearation should not use function
	line 15: expect error: array range shouldn't be real
===============================================================================}

program (input,output);	{expect error: no program name}

	const
		i386 = qq();	// error
		
	type
		abc = record
			b : array[1.01..2.22] of integer	//error 
		end
			
	var
	begin
	end.
